@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="resources/css/notes-section.css" />
     <link rel="stylesheet" href="resources/css/chat-section.css" />
     <script src="resources/js/script.js" defer></script>
+    <script src="resources/js/Observer.js" defer></script>
   </head>
   <body>
     <div class="bg-gif"></div>
