@@ -131,13 +131,14 @@ main {
 
 .category-tabs {
   display: flex;
-  gap: 8px;
+  gap: 12px;
   align-items: center;
+  justify-content: center;
   padding: 8px 6px;
   overflow: auto;
   border-radius: 8px;
   position: sticky;
-  top: 84px;
+  top: 0px;
   z-index: 1200;
   background: linear-gradient(180deg, rgba(6,10,10,0.65), rgba(6,10,10,0.35));
   backdrop-filter: blur(6px);
@@ -152,14 +153,16 @@ main {
 }
 
 .category-tab {
+  position: relative;
   background: transparent;
-  border: 1px solid rgba(255,255,255,0.04);
+  border: none;
   color: #cfe;
-  padding: 6px 6px;
+  padding: 8px 12px;
   border-radius: 999px;
   cursor: pointer;
   white-space: nowrap;
   font-size: 0.95rem;
+  font-family: 'Poppins', system-ui, -apple-system, sans-serif;
   transition: background 0.12s ease, transform 0.12s ease, box-shadow 0.12s ease;
 }
 
@@ -168,16 +171,36 @@ main {
   background: rgba(0,255,204,0.03);
 }
 
+.category-tab::after {
+  content: '';
+  position: absolute;
+  left: 12%;
+  right: 12%;
+  bottom: 5px;
+  height: 4px;
+  border-radius: 999px;
+  background: transparent;
+  box-shadow: none;
+  opacity: 0;
+  transform: translateY(6px);
+  transition: all 0.18s ease;
+}
+
 .category-tab.active {
-  background: linear-gradient(90deg,#00ffd0,#00aaff);
-  color: #001317;
-  font-weight: 700;
-  border: none;
-  box-shadow: 0 10px 30px rgba(0,255,204,0.06);
+  background: transparent;
+  color: #eafffb;
+  font-weight: 600;
+}
+
+.category-tab.active::after {
+  background: linear-gradient(90deg, rgba(0,255,208,1), rgba(0,170,255,1));
+  box-shadow: 0 8px 30px rgba(0,150,255,0.22);
+  opacity: 1;
+  transform: translateY(0);
 }
 
 @media (max-width: 768px) {
-  .category-tabs { top: 68px; padding: 8px; }
+  .category-tabs { top: 0px; padding: 8px; }
 }
 
 @media (max-width: 1100px) {
